--- a/week3/css/style.css
+++ b/week3/css/style.css
@@ -7,7 +7,10 @@ h1 {
 	font-size: 24px;
 	font-weight: bold;
 }
-
+h3{
+	text-decoration: underline;
+	font-weight: lighter;
+}
 #Slogan {
 	font-style: italic;
 }
@@ -30,11 +33,7 @@ text-align: center;
 	background-color: #dae5e8;
 	padding-bottom: 5px;
 }
-header{
-	text-align: center;
-}
 
-ul{
-	list-style-type: none;
+header{
 	text-align: center;
 }
