--- a/week6/style.css
+++ b/week6/style.css
@@ -30,7 +30,7 @@ h2{
 
 nav{
 	background-color: #7d8da5;
-	padding: 10px;
+	padding: 5px;
 	margin:0;
 
 }
@@ -41,10 +41,13 @@ nav a {
 	background-color:#d8d0c6;
 	color: #495059;
 	/*float here so it's a horizontal nav*/
-	margin:2px;
+	margin:0 1%;
 	padding: 5px 20px 5px 20px;
 	text-decoration: none;
-/*	float: left;*/
+	text-align: center;
+	width: 23%;
+	display: block;
+	float: left;
 }
 
 p{
@@ -56,15 +59,13 @@ p{
 footer{
 	font-size: 12px;
 	color: #495059;
-	width: 25%;
-	margin-left:auto; 
-	margin-right: auto;
-	margin-bottom: 0;
 	text-transform: uppercase;
 	padding-bottom: 0;
+	text-align: center;
 
 }
-.clearfix: after{
+
+.clearfix:after{
 visibility: hidden;
 display: block;
 font-size: 0;
@@ -73,15 +74,24 @@ clear:both;
 height: 0;
 }
 
-#indexnav:
-{
-	margin-top: 8%;
+#indexnav{
+	margin-top: 2%;
 }
+
 #logo{
 	width: 650px;
 	margin: auto;
 	margin-top: 12px;
 	margin-bottom: 10px;
+}
+
+#designwrap{
+	width: 650px;
+	margin: 10px auto;
+}
+#carousel{
+	width:650px;
+	margin:30px auto;
 }
 #carousel img:hover {
 	color: rgba(#,#,#,.66)
@@ -89,7 +99,7 @@ height: 0;
 }
 
 #about{
-	margin: auto;
+	margin: 0 auto 30px;
 	width: 625px;
 }
 
@@ -99,8 +109,16 @@ height: 0;
 	margin-top: 10px;
 }
 
-#social{
-	float: left;
+#contact{
 	width: 50%;
+	margin:10px auto;
+}
+
+#social{
+	width: 33%;
 	margin:auto;
+}
+
+#social img{
+	width: 19%;
 }
