--- a/week8/css/style.css
+++ b/week8/css/style.css
@@ -4,17 +4,17 @@ body{
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
 	color:#232627;
-	font-size: 17px;
+	font-size: 16px;
 }
 header{
 	text-align: center;
 }
 input{
 	font-family: "Raleway," sans-serif;
-	/*i don't think ^^^^ this worked?*/
 	text-transform: uppercase;
 	display: inline-block;
-	width: 20%;
+	width: 25%;
+	padding: .5em;
 	/*how to make search bar align with feature when that's in the middle?*/
 }
 
@@ -24,7 +24,10 @@ img{
 	max-width:425px;
 	width:100%;
 }
-li a{
+nav{
+	padding: 1%
+}
+nav li a{
 	font-family: 'Raleway', sans-serif;
 	text-decoration: none;
 	border: 1px solid #000;
@@ -34,13 +37,14 @@ li a{
 	color: #000; 
 	background-color: #fff;
 }
-ul{
+nav ul{
 	list-style: none;
 	padding: 0;
 }
 h1, h2, h3 {
 	font-family: 'Raleway', sans-serif;
 	margin-bottom:.5em;
+	font-weight: lighter;
 }
 
 h1 {
@@ -51,7 +55,7 @@ h1 {
 
 /*how to make title text align with slogan so that the size is responsive?*/
 
-h3{
+h2{
 	text-decoration: underline;
 	font-weight: 400;
 	/*padding: 0*/
@@ -68,29 +72,33 @@ h3{
 
 .Block {
 	background-color: #dae5e8;
-	border: dotted;
+	border: none;
 	text-align: center;
+	margin: .5em;
 }
 .column1, main, .column3 {
 	float:left;
 	width:25%;
-	padding:1em;
+	padding:.25em;
 }
-main { width:50%; }
+
+main {
+	width: 50%;
+}
 
 #Slogan {
 	font-style: italic;
 }
 
 #Feature {
-	width: 40%;
-	border: double;
+	padding: .5em;
 }
 #Feature p{
 	text-align: left;
 }
 #Search{
 	background-color: #dae5e8;
+	padding: 1em;
 }
 #Search p{
 	display: inline-block;
@@ -105,5 +113,4 @@ main { width:50%; }
 	body{
 		font-size: 18px;
 	}
-	/*make search bar bigger for fingers*/
 }
